Update to the main page
Added basic HTML skeleton and changed the main text

--- a/index.html
+++ b/index.html
@@ -1,3 +1,37 @@
-<!-- <p> is the paragraph tag that needs to be closed. Below shows a use. This comment also shows how to comment -->
-	
-<p>Hello, world!</p>
+<!-- Below is the standard format backbone for html files. Doctype tells browsers what the document type is -->
+<!DOCTYPE html>
+<html>
+
+<!-- In between head is metadata, data about data, that can usually contain CSS and javascript. This info is not displayed on the website -->
+  <head>
+
+  	<!-- title is needed to be added-->
+  	<title>Page Title</title>
+
+  	<!-- Self-closing tag that defines the character set -->
+  	<meta charset="utf-8"> 
+  </head>
+
+  <!-- In between body is everything displayed to the user of the website -->
+  <body>
+
+  	<!-- <p> is the paragraph tag that needs to be closed. Below shows a use. This comment also shows how to comment -->
+  	<p>
+  	Tyler Styers
+  	University of Florida
+  	Computer Science from the College of Engineering
+    </p>
+  </body>
+</html>
+
+<!-- Overall, the basic skeleton is:
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Page Title</title>
+    <meta charset="utf-8">
+  </head>
+  <body>
+  </body>
+</html>
+-->
