Updated main page
Added different headers with different sizes. More information added.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <head>
 
   	<!-- title is needed to be added-->
-  	<title>Page Title</title>
+  	<title>About Tyler Styers</title>
 
   	<!-- Self-closing tag that defines the character set -->
   	<meta charset="utf-8"> 
@@ -16,11 +16,25 @@
   <body>
 
   	<!-- <p> is the paragraph tag that needs to be closed. Below shows a use. This comment also shows how to comment -->
+
+	<!-- We can use different header tags to change font size and create headers. Goes down to like h6 ex -->
+  	<h1> About Tyler Styers </h1>
+
+  	<h2> Education: </h2>
+
   	<p>
-  	Tyler Styers
   	University of Florida
   	Computer Science from the College of Engineering
-    </p>
+	</p>
+
+	<h3> Hobbies: </h3>
+
+	<p>
+	Video Games
+	Roller Coasters
+	Programming
+	Sports
+	</p>
   </body>
 </html>
 
