Updated main page
Added bold and italic examples to words

--- a/index.html
+++ b/index.html
@@ -18,13 +18,17 @@
   	<!-- <p> is the paragraph tag that needs to be closed. Below shows a use. This comment also shows how to comment -->
 
 	<!-- We can use different header tags to change font size and create headers. Goes down to like h6 ex -->
+
+	<!-- Emphasizing text or italicizing can be done with <em> tag -->
+
+	<!-- Strong text or bold text can be done with <strong> tag -->
   	<h1> About Tyler Styers </h1>
 
   	<h2> Education: </h2>
 
   	<p>
-  	University of Florida
-  	Computer Science from the College of Engineering
+  	<strong> University of Florida </strong>
+  	<em> Computer Science from the College of Engineering </em>
 	</p>
 
 	<h3> Hobbies: </h3>
@@ -32,7 +36,7 @@
 	<p>
 	Video Games
 	Roller Coasters
-	Programming
+	<em> <strong> Programming </strong> </em>
 	Sports
 	</p>
   </body>
