Update to main page
Added hyperlink examples to page.

--- a/index.html
+++ b/index.html
@@ -39,6 +39,16 @@
 	<em> <strong> Programming </strong> </em>
 	Sports
 	</p>
+
+	<h4> Favorite websites: </h4>
+
+	<p>
+
+	<!-- Below is an example of hyperlinking text. It is done with <a and then href=link of the hyperlinke>. This shows off an attribute, which is a bit of text inside an HTML tag that gives extra info about how to process it. href is an attribute for hypertext reference -->
+	<a href="https://www.twitch.tv/">Twitch.tv</a>
+
+	<!-- It is possible to make sure links open in new tabs by doing below: -->
+	<br> <a href="https://www.youtube.com/" target="_blank" rel="noopener">Youtube.com </a>
   </body>
 </html>
 
