Updated main page
Added pictures to the website

--- a/index.html
+++ b/index.html
@@ -49,6 +49,17 @@
 
 	<!-- It is possible to make sure links open in new tabs by doing below: -->
 	<br> <a href="https://www.youtube.com/" target="_blank" rel="noopener">Youtube.com </a>
+
+	<h4> Favorite waifu: </h4>
+
+	<!-- Below is an example of adding an image. Src attribute can be path to pic on the web or from your own filesystem. Alt is text describing an image that can appear when image cannot load-->
+
+	<img src="Pictures/KomiSan.jpg" alt="The best waifu is Komi-san.">
+	<br>
+
+	<!-- Here is an example of linking to the image to display, but not recommended -->
+	<img src="https://images.app.goo.gl/nNQNyGBDXuDPche49" alt="Komi the goddess">
+	
   </body>
 </html>
 
