--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
 	<br>
 
 	<!-- Here is an example of linking to the image to display, but not recommended -->
-	<img src="https://images.app.goo.gl/nNQNyGBDXuDPche49" alt="Komi the goddess">
-	
+	<img src="https://www.google.com/search?q=komi+san&rlz=1C1CHBF_enUS725US725&source=lnms&tbm=isch&sa=X&ved=0ahUKEwj71_-Es8fiAhWhVt8KHQzvAAcQ_AUIECgB&biw=1920&bih=937#imgrc=Zcc_qVM_AgQKVM:" alt="Komi the goddess">
+
   </body>
 </html>
 
