Last change to picture
This will properly display both pictures

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
 	<img src="Pictures/KomiSan.jpg" alt="The best waifu is Komi-san.">
 	<br>
-	<img src="C:\Users\Tyler Styers\Documents\GitHub\sample_website\Pictures\KomiSan2.jpg" alt="Komi the goddess">
+	<img src="Pictures/KomiSan2.jpg" alt="Komi the goddess">
   </body>
 </html>
 
