Added navigation "menu"
Can now travel to each page

--- a/index.html
+++ b/index.html
@@ -22,6 +22,15 @@
 	<!-- Emphasizing text or italicizing can be done with <em> tag -->
 
 	<!-- Strong text or bold text can be done with <strong> tag -->
+
+	<!-- This is the best navigation menu we can do without CSS or templating. This has to be added to each page and allows transversal to each page -->
+
+	<div>
+      <a href="index.html">Home</a>
+      <a href="moby_dick.html">Moby Dick</a>
+      <a href="tags.html">HTML Tags</a>
+    </div>
+
   	<h1> About Tyler Styers </h1>
 
   	<h2> Education: </h2>
