--- a/moby_dick.html
+++ b/moby_dick.html
@@ -17,6 +17,13 @@
     <li> is used with ol as a list element. This will put the text after the number. 1. (li text here).
     <ul> creates an unordered list, which is a list of bullet points and uses the li tag as well for each bullet point.
     -->
+
+    <div>
+      <a href="index.html">Home</a>
+      <a href="moby_dick.html">Moby Dick</a>
+      <a href="tags.html">HTML Tags</a>
+    </div>
+    
     <header>
       <h1>A Softcover Book Report</h1>
       <h2>Moby-Dick (or, The Whale)</h2>
