--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
 
 	<!-- This is the best navigation menu we can do without CSS or templating. This has to be added to each page and allows transversal to each page -->
 
-	<div>
+	<div style="text-align: right;">
       <a href="index.html">Home</a>
-      <a href="moby_dick.html">Moby Dick</a>
-      <a href="tags.html">HTML Tags</a>
+      <a href="moby_dick.html" style="margin: 0 0 0 10px">Moby Dick</a>
+      <a href="tags.html" style="margin: 0 0 0 10px">HTML Tags</a>
     </div>
 
   	<h1> About Tyler Styers </h1>
